# ur5_rg2_moveit2_config

./: CMakeLists.txt  README.md  package.xml
config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
config/fake_control/: controllers.yaml  start_position.yaml  ur5_controller.yaml
launch/: move_group_action_server.launch.py  move_group_fake_control.launch.py  rviz_interactive.rviz
srdf/: rg2.xacro  ur5.srdf  ur5.srdf.xacro  ur5.xacro  ur5_rg2.srdf  ur5_rg2.srdf.xacro
